--- a/web-app/templates/login.html
+++ b/web-app/templates/login.html
@@ -5,6 +5,10 @@
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <style>
         body {
             background-color: #f8f9fa;
@@ -17,6 +21,7 @@
             border-radius: 12px;
             box-shadow: 0 4px 16px rgba(0,0,0,0.1);
             background-color: #ffffff;
+            font-family: "Aleo", serif;
         }
     </style>
 </head>
@@ -25,11 +30,15 @@
     <div class="login-card">
         <h2 class="text-center mb-4">Login</h2>
 
-        {% if message %}
-            <div class="alert alert-danger" role="alert">
-                {{ message }}
-            </div>
-        {% endif %}
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-danger" role="alert"> 
+                    {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
 
         <form method="POST">
             <div class="mb-3">
